fixed weird spacing on create and update spot descriptions

--- a/frontend/src/components/CreateSpotForm/CreateSpotForm.css
+++ b/frontend/src/components/CreateSpotForm/CreateSpotForm.css
@@ -92,7 +92,7 @@
 }
 
 #createSpotDescription {
-  height: 15rem;
+  height: 16.3rem;
 }
 
 #createSpotTitleContainer {
